--- a/Lab2/Lab2/Lab2.csproj
+++ b/Lab2/Lab2/Lab2.csproj
@@ -6,4 +6,9 @@
 		<RootNamespace>Lab2</RootNamespace>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="xunit" Version="2.9.2" />
+	  <PackageReference Include="xunit.abstractions" Version="2.0.3" />
+	</ItemGroup>
+
 </Project>
