--- a/Lab4/Lab4/M_Kostiuk.csproj
+++ b/Lab4/Lab4/M_Kostiuk.csproj
@@ -1,17 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+	<ItemGroup>
+		<ProjectReference Include="..\Library\Library.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="4.1.1" />
+	</ItemGroup>
+
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<PackAsTool>true</PackAsTool>
-		<ToolCommandName>lab2</ToolCommandName>
+		<ToolCommandName>m_kostiuk</ToolCommandName>
 		<Version>1.0.0</Version>
 	</PropertyGroup>
-
-	<ItemGroup>
-		<PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="4.1.1" />
-	</ItemGroup>
 
 </Project>
